--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "aws-sdk": "^2.438.0",
+    "aws-sdk": "latest",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "aws-xray-sdk": "latest"
   }
 }
